fix(alignment): social buttons vertical alignment

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -56,6 +56,7 @@ footer {
 }
 
 .hero-footer {
+  align-items: center;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
